connect improvements, documentation on ksql with Java 17